# nuspell

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSES  Makefile.am  NuspellConfig.cmake  README.md  appveyor.yml  clang-format.sh  code-coverage-reconfigure-build-and-test.sh  configure.ac  developing-build-and-test.sh  developing-reconfigure.sh  development-build-and-test.sh  development-reconfigure-build-and-test.sh  development-reconfigure.sh  nuspell.pc.in  production-build.sh  production-reconfigure-and-build.sh  production2-build.sh  production2-reconfigure.sh  profiling-reconfigure-and-build.sh  testing-reconfigure-and-build.sh  update-m4-from-gettext.sh  vcpkg.json
.github/workflows/: cmake.yml
checks/: .gitignore  README.md  clang-format.sh  cldoc.sh  cloc.sh  coverxygen.sh  cppcheck.sh  hpp2plantuml.sh  locale-usage.sh  pretty-print.sh  vera++.sh
docs/: CMakeLists.txt  ISSUE_TEMPLATE.md  Makefile.am  README.md  Third-party_licenses  nuspell.1  nuspell.1.md  nuspell.3  nuspell.5  nuspell.5.md
m4/: README
src/: Makefile.am
src/hunspell/: CMakeLists.txt  Makefile.am  affentry.cxx  affixmgr.cxx  affixmgr.hxx  atypes.hxx  filemgr.cxx  filemgr.hxx  hashmgr.cxx  hashmgr.hxx  hunzip.cxx  hunzip.hxx  replist.cxx  replist.hxx
src/hunspell2/: aff_data.cxx  dic_data.cxx  dic_data.hxx  locale_utils.hxx  main.cxx  stream_utils.hxx  string_utils.hxx
src/nuspell/: .gitignore  CMakeLists.txt  Makefile.am  aff_data.cxx  aff_data.hxx  checker.cxx  checker.hxx  condition.cxx  condition.hxx  defines.hxx  dic_data.cxx  dic_data.hxx  dictionary.cxx  dictionary.hxx  finder.cxx  finder.hxx  locale_utils.cxx  locale_utils.hxx  main.cxx  nuspell_export2.h  regress.cxx  stream_utils.hxx  string_utils.cxx  string_utils.hxx  structures.cxx  structures.hxx  suggester.cxx  suggester.hxx  unicode.hxx  utils.cxx  utils.hxx  verify.cxx
src/parsers/: Makefile.am  noparser.cxx  noparser.hxx  xmlparser.cxx
src/tools/: CMakeLists.txt  Makefile.am  hunspell.cxx  nuspell.cxx
tests/: .gitignore  CMakeLists.txt  Makefile.am  aff_data_test.cxx  base_utf_corrections.tsv  base_utf_segmentations.txt  catch-runner.sh  catch_main.cxx  clang-format.sh  condition_test.cxx  dictionary_test.cxx  finder_test.cxx  legacy_test.cxx  locale_utils_test.cxx  segment.sh  segment.txt  string_utils_test.cxx  structures_test.cxx  test.sh  unit_test.cxx  utils_test.cxx  verify.cxx
tests/nuspell/: Makefile.am
tests/parsererror/: breakerrcor.aff  breakerrcor3.aff  breakerrmis.aff  breakerrmul.aff  breakerrnum.aff
tests/v1cmdline/: Makefile.am  base.dic  base.good  base_utf.dic  base_utf.good  breakerrcor2.aff  development_compare_calc.sh  development_compare_one.sh  development_compare_render.sh  development_compare_view.sh  morph.dic  slash.good  slash.wrong  utf8_longflagwarn.aff  utf8_longflagwarn.dic  utf8_longflagwarn.good
